fixed overflow bug (#820)

--- a/geonode_mapstore_client/client/themes/geonode/less/_base.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_base.less
@@ -187,5 +187,5 @@ body {
 }
 
 .gn-page-wrapper {
-    overflow-x: hidden;
+    overflow-x: clip;
 }
